--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,3 +16,5 @@ target_sources(sph
 add_subdirectory(disph)
 add_subdirectory(gsph)
 add_subdirectory(sample)
+file(COPY ${CMAKE_SOURCE_DIR}/sample
+     DESTINATION ${CMAKE_BINARY_DIR})
