--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,9 +13,12 @@ target_sources(sph
         timestep.cpp
         sample_registry.cpp
         heating_cooling.cpp
+        inplane_integration.cpp
     )
 
 add_subdirectory(disph)
 add_subdirectory(gdisph)
 add_subdirectory(gsph)
 add_subdirectory(sample)
+file(COPY ${CMAKE_SOURCE_DIR}/sample
+     DESTINATION ${CMAKE_BINARY_DIR})
