--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(disph)
 add_subdirectory(gsph)
 add_subdirectory(kernel)
 add_subdirectory(relaxation)
+add_subdirectory(utilities)
